--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -11,7 +11,7 @@
 
   <!-- SAPUI5 library -->
   <script id="sap-ui-bootstrap"
-    src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+    src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
     data-sap-ui-theme="sap_bluecrystal"
     data-sap-ui-libs="sap.m, sap.ui.layout"
     data-sap-ui-compatVersion="edge"
@@ -28,7 +28,7 @@
 <body class="sapUiBody" >
   <div id="weatherDiv"></div>
   <script>
-    com.sap.demo.OpenUI5Demo().main('weatherDiv');
+    OpenUI5Demo.main('weatherDiv');
   </script>
 </body>
 </html>
