Clean up Utils.scala. Add warning message for missing API key

--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ScalaJS + SAPUI5 Weather Report (Fast Opt)</title>
+  <title>ScalaJS + OpenUI5 Weather Report (Fast Opt)</title>
   <meta http-equiv="cache-control" content="no-cache">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
